--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -395,7 +395,7 @@ footer p{
     margin-bottom: 0.5em;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 767px){
     header{
         margin: 0;
     }
@@ -602,29 +602,25 @@ footer p{
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 980px){
+@media only screen and (min-width: 768px) and (max-width: 1024px){
     .Ancres{
-        margin-left: 0;
+        width: 100%;
+        order: 3;
+        margin: 0;
     }
 
     .Menu{
-        justify-content: space-between;
+        flex-wrap: wrap;
     }
+
     .MainContent{
         flex-wrap: wrap;
         margin: 0;
     }
 
-    .Contenu1{
-        justify-content: space-between;
-    }
-
-    .Contenu1 article{
-        margin-right: 0;
-    }
-
     .Populaires{
-        margin: 1em 0;
+        order: 1;
+        margin: 0;
     }
 
     .Contenu2{
@@ -632,17 +628,39 @@ footer p{
         justify-content: space-evenly;
     }
 
+    .Hebergements{
+        order: 2;
+        margin-top: 1em;
+    }
+
+    .Contenu1{
+        justify-content: space-between;
+    }
+
     .Contenu3{
         flex-wrap: wrap;
         justify-content: space-between;
     }
 
-    .Contenu3 .Calanques{
-        margin: 1.5em 0 0 0;
+    .Contenu3 .Port{
+        margin-bottom: 1.5em;
     }
 
-    .Contenu3 .NotreDame{
-        margin-top: 1.5em;
+    .Contenu3 .Frioul{
+        margin-bottom: 1.5em;
+    }
+
+    .Contenu3 .Calanques{
+        margin-bottom: 1.5em;
+    }
+
+    .Contenu3 article{
+        width: 100%;
+        margin: 0;
+    }
+
+    .Contenu3 div{
+        width: 100%;
     }
 
     footer{
